---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "const N := 1\nvar c5 : char(5)\n\nvar _e00 : string(N) := c5 % [not captured by ctc]\n"
---
"N"@"src/main.t:6..7" [ConstVar(Const, No)]: int
"c5"@"src/main.t:17..19" [ConstVar(Var, No)]: char_n Fixed(Unevaluated(PackageId(3072), BodyId(1)))
"_e00"@"src/main.t:35..39" [ConstVar(Var, No)]: string_n Fixed(Unevaluated(PackageId(3072), BodyId(2)))
"<root>"@"<unknown>:0..0" [Module(No)]: <error>

error at src/main.t:55..57: mismatched types
| note for src/main.t:55..57: this is of type `char(5)`
| note for src/main.t:42..51: this is of type `string(1)`
| info: `char(5)` is not assignable into `string(1)`
